--- a/secretPage.html
+++ b/secretPage.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h2>
-        welcome to secret page!
+        welcome to secret page !
     </h2>
+    <p>
+        you com here becouse you have right secret word
+    </p>
 </body>
 </html>
